--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active"><a class="nav-link"
-					href="index.jsp">Home<span class="sr-only">(current)</span></a></li>
+					href="index.html">Home<span class="sr-only">(current)</span></a></li>
 				<li class="nav-item active"><a class="nav-link" href="#">Services</a>
 				</li>
 				<li class="nav-item active"><a class="nav-link"
-					href="about.jsp">About</a></li>
+					href="about.html">About</a></li>
 				<li class="nav-item active"><a class="nav-link" href="#">Contact</a>
 				</li>
 
@@ -66,7 +66,7 @@
 		</ul>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="images/nav1.jpg" alt="Los Angeles" width="1520"
+				<img src="nav1.jpg" alt="Los Angeles" width="1520"
 					height="500">
 				<div class="carousel-caption">
 					<h3>HTML3 and CSS3</h3>
@@ -74,14 +74,14 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="images/nav2.jpg" alt="Its Me" width="1520" height="500">
+				<img src="nav2.jpg" alt="Its Me" width="1520" height="500">
 				<div class="carousel-caption">
 					<h3>Java Enterprise Edition</h3>
 					<p>Develop Here Web sites</p>
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="images/nav3.jpg" alt="New York" width="1520" height="500">
+				<img src="nav3.jpg" alt="New York" width="1520" height="500">
 				<div class="carousel-caption">
 					<h3>Developer</h3>
 					<p>Become a Web site Developer</p>
@@ -103,7 +103,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-12">
-					<img src="images/himanshu.jpg" class="img-fluid aboutimg">
+					<img src="himanshu.jpg" class="img-fluid aboutimg">
 				</div>
 				<div class="col-lg-6 col-md-6 col-12">
 					<h2 class="display-4">I am Software Developer Himanshu</h2>
@@ -130,7 +130,7 @@
 				<div class="col-log-4 col-md-4 col-12">
 					<div class="card">
 						<img class="card-img-top"
-							src="images/java6.jpg"
+							src="java6.jpg"
 							alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">HTML5</h4>
@@ -143,7 +143,7 @@
 				<div class="col-log-4 col-md-4 col-12">
 					<div class="card">
 						<img class="card-img-top"
-							src="images/java3.jpg"
+							src="java3.jpg"
 							alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">CSS3</h4>
@@ -156,7 +156,7 @@
 				<div class="col-log-4 col-md-4 col-12">
 					<div class="card">
 						<img class="card-img-top"
-							src="images/java2.jpg"
+							src="java2.jpg"
 							alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Java</h4>
@@ -175,7 +175,7 @@
 				<div class="col-log-4 col-md-4 col-12">
 					<div class="card">
 						<img class="card-img-top"
-							src="images/java5.jpg"
+							src="java5.jpg"
 							alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">Bootstrap</h4>
@@ -188,7 +188,7 @@
 				<div class="col-log-4 col-md-4 col-12">
 					<div class="card">
 						<img class="card-img-top"
-							src="images/java4.jpg"
+							src="java4.jpg"
 							alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">JavaScript</h4>
@@ -201,7 +201,7 @@
 				<div class="col-log-4 col-md-4 col-12">
 					<div class="card">
 						<img class="card-img-top"
-							src="images/java1.jpg"
+							src="java1.jpg"
 							alt="Card image">
 						<div class="card-body">
 							<h4 class="card-title">PHP</h4>
@@ -224,37 +224,37 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-12">
 					<img
-						src="images/java1.jpg"
+						src="java1.jpg"
 						class="img-fluidp pb-3">
 				</div>
 				<!-- second -->
 				<div class="col-lg-4 col-md-4 col-12">
 					<img
-						src="images/java2.jpg"
+						src="java2.jpg"
 						class="img-fluidp pb-3">
 				</div>
 				<!-- third -->
 				<div class="col-lg-4 col-md-4 col-12">
 					<img
-						src="images/java3.jpg"
+						src="java3.jpg"
 						class="img-fluidp pb-3">
 				</div>
 				<!-- fourth -->
 				<div class="col-lg-4 col-md-4 col-12">
 					<img
-						src="images/java4.jpg"
+						src="java4.jpg"
 						class="img-fluidp pb-3">
 				</div>
 				<!-- fifth -->
 				<div class="col-lg-4 col-md-4 col-12">
 					<img
-						src="images/java5.jpg"
+						src="java5.jpg"
 						class="img-fluidp pb-3">
 				</div>
 				<!-- sixth -->
 				<div class="col-lg-4 col-md-4 col-12">
 					<img
-						src="images/java6.jpg"
+						src="java6.jpg"
 						class="img-fluidp pb-3">
 				</div>
 			</div>
