--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<li class="nav-item active"><a class="nav-link" href="#">Services</a>
 				</li>
 				<li class="nav-item active"><a class="nav-link"
-					href="about.html">About</a></li>
+					href="https://himanshu4475.github.io/saxenag.github.io/about.html">About</a></li>
 				<li class="nav-item active"><a class="nav-link" href="#">Contact</a>
 				</li>
 
